# navigator.business.nj.gov

./: .dockerignore  .env.sample  .eslintignore  .eslintrc.json  .gitignore  .phrase.yml  .prettierignore  .prettierrc  .yarnrc.yml  AGENTS.md  Builder.Dockerfile  BuilderImage.Dockerfile  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.MD  DELETE_THIS.tsx  LICENSE  README.md  SECURITY.md  WebApp.Dockerfile  _redirects  amplify.yml  biome.json  consoleMethodsSetupAndBreakdown.ts  cspell.json  docker-compose.yml  error-patterns.txt  error-types.txt  failing-tests.txt  form-validation-setup-guide.md  form.json  index.html  jest.config.mjs  jest.config.ts  jest.coverage.ts  jest.shared.ts  lerna.json  netlify.toml  package-lock.json  (+11 more)
.circleci/: config.yml
.github/: pull_request_template.md
.husky/: commit-msg  pre-commit
amplify/: cli.json  team-provider-info.json
api/: .dependency-cruiser.js  .env-template  .eslintignore  .eslintrc.json  AGENTS.md  CLAUDE.md  README.md  businesses-dynamodb-schema.json  database.json  dynamodb-schema.json  jest-dynalite-config.js  jest-dynamodb-config.js  jest.config.js  jest.config.ts  local.dev.api.Dockerfile  local.dev.wiremock.Dockerfile  messages-dynamodb-schema.json  package-lock.json  package.json  serverless.ts  tsconfig.json  tsconfig.paths.json  users-dynamodb-schema.json  webpack.config.js  webpack.config.ts
app/: package-lock.json  package.json
backend/: package-lock.json  package.json  serverless.ts
components/: AuthButton.tsx  Layout.tsx  PageSkeleton.tsx  Step.tsx  Task.test.tsx  Task.tsx  TaskLayout.tsx  (+2 more)
(+7039 files in other folders)
