[project]
name = "navigator.business.nj.gov"
description = ""
version = "2026.7.0"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "asttokens",
    "beautifulsoup4",
    "black",
    "cachetools",
    "certifi",
    "cffi",
    "charset-normalizer",
    "click",
    "contourpy",
    "cryptography",
    "cycler",
    "decorator",
    "executing",
    "fonttools",
    "idna",
    "ipdb",
    "ipython",
    "ipython-pygments-lexers",
    "jedi",
    "kiwisolver",
    "markdown",
    "matplotlib",
    "matplotlib-inline",
    "mypy-extensions",
    "numpy",
    "packaging",
    "parso",
    "pathspec",
    "pexpect",
    "pillow",
    "platformdirs",
    "prompt-toolkit",
    "ptyprocess",
    "pure-eval",
    "pycparser",
    "pygments",
    "pyparsing",
    "python-dateutil",
    "python-dotenv",
    "pytokens",
    "pyyaml",
    "requests",
    "six",
    "soupsieve",
    "stack-data",
    "traitlets",
    "typing-extensions",
    "urllib3",
    "wcwidth",
]
